# clipshare

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: dev-build.yml
nix/: default.nix  hm-module.nix
src/: main.rs
