[package]
name = "clipshare"
version = "0.0.7"
edition = "2021"
license = "MIT"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
description = "Share clipboard between machines on your local network"
categories = ["command-line-utilities"]
keywords = ["clipboard", "share"]
repository = "https://github.com/reu/clipshare"

[dependencies]
arboard = { version = "3.4.0", features = ["wayland-data-control"] }
clap = { version = "4.5.9", features = ["derive"] }
rcgen = "0.13.1"
rustls = "0.23.11"
tokio = { version = "1.38.0", features = ["io-std", "io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "0.26.0" }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
